--- a/ife-wei-06/ife-wei-06.css
+++ b/ife-wei-06/ife-wei-06.css
@@ -68,3 +68,49 @@
   font-size: 21px;
 }
 
+.container-2 {
+  margin-top: 20px;
+}
+.title-what, .title-when, .title-how {
+  font-size: 16px; font-weight: bold; text-decoration: underline; padding: 10px 0px; font-family: "Microsoft YaHei";
+}
+.title-what {
+  color: #418c59;
+}
+.title-when {
+  color: #d2994f;
+}
+.title-how {
+  color: #cc7680;
+}
+.card-1, .card-2, .card-3 {
+  float: left; margin-right: 20px; font-size: 12px; line-height: 16px;
+}
+.card-1 {
+  width: 250px; color: #767777; font-family: "宋体";
+}
+.card-2 {
+  width: 220px; color: rgba(90,90,90,.7); font-family: "Microsoft YaHei";
+}
+.card-3 {
+  width: 140px; color: rgba(90,90,90,.7);
+}
+.card-3 .text {
+  padding-bottom: 10px;
+}
+.ullist {
+  list-style: none; padding: 5px 0px 0px 5px; color: #676767; line-height: 20px;
+}
+.number {
+  color: #cd4a48; font-style: italic; opacity: 0.7;
+}
+.container-3 {
+  width: 415px;
+}
+.front-technology {
+  text-transform: uppercase; font-family: "SimHei"; font-size: 42px; color: #11456b;
+  font-weight: bold;
+}
+.front-technology .THEword {
+  font-size: 72px; font-style: italic; color: #f5e327;
+}
