--- a/ife-wei-06/ife-wei-06.css
+++ b/ife-wei-06/ife-wei-06.css
@@ -69,7 +69,7 @@
 }
 
 .container-2 {
-  margin-top: 20px;
+  margin-top: 20px; position: absolute; min-width: 640px; overflow: hidden;
 }
 .title-what, .title-when, .title-how {
   font-size: 16px; font-weight: bold; text-decoration: underline; padding: 10px 0px; font-family: "Microsoft YaHei";
@@ -87,16 +87,16 @@
   float: left; margin-right: 20px; font-size: 12px; line-height: 16px;
 }
 .card-1 {
-  width: 250px; color: #767777; font-family: "宋体";
+  width: 230px; color: #767777; font-family: "宋体";
 }
 .card-2 {
-  width: 220px; color: rgba(90,90,90,.7); font-family: "Microsoft YaHei";
+  width: 210px; color: rgba(90,90,90,.7); font-family: "Microsoft YaHei";
 }
 .card-3 {
   width: 140px; color: rgba(90,90,90,.7);
 }
 .card-3 .text {
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 .ullist {
   list-style: none; padding: 5px 0px 0px 5px; color: #676767; line-height: 20px;
@@ -104,13 +104,53 @@
 .number {
   color: #cd4a48; font-style: italic; opacity: 0.7;
 }
+
+.container-bottom {
+  margin-top: 270px; overflow: hidden;
+}
 .container-3 {
-  width: 415px;
+  display: block; width: 415px; float: left;
 }
 .front-technology {
-  text-transform: uppercase; font-family: "SimHei"; font-size: 42px; color: #11456b;
-  font-weight: bold;
+  text-transform: uppercase; font: bold 42px/42px 黑体; color: #11456b;
+  border-bottom: 2px solid #11456b; padding-bottom: 10px;
 }
 .front-technology .THEword {
   font-size: 72px; font-style: italic; color: #f5e327;
+}
+.chinese {
+  font-size: 33px;
+}
+.wordtext {
+  font-size: 12px; color: rgba(118, 119, 119, .7); font-family: "宋体"; line-height: 16px; margin-top: 25px;
+}
+.wordtext::first-letter {
+  display: block; float: left; font-size: 70px; color: #f5e327; font-family: "Microsoft YaHei"; padding: 25px 5px 25px 0px;
+}
+.laptop-3 {
+  float: right; margin: 15px 6px 15px 20px;
+}
+.indent-two {
+  text-indent: 2em;
+}
+.container-4 {
+  float: right; width: 458px; z-index: -1;
+}
+
+.laptop-2 .cover {
+  background: rgba(25, 25, 25, .5); z-index: 0; width: 458px; height: 61px; position: absolute;
+  margin-top: -64px;
+}
+.cover p {
+  font-size: 16px; font-style: italic; font-family: "Microsoft YaHei"; color: #72b16a; margin-top: 8.5px;
+  border-left: 3px solid #72b16a; letter-spacing: 140%; margin-left: 40px; padding: 3px 0px 6px 0px;
+}
+.cover .whitetext {
+  font-size: 26px; color: #ffffff; padding: 0px 10px; font-style: normal;
+}
+.lastblock {
+  margin-top: 20px; width: 459px; height: 318px; background: #eeedd6; padding: 20px 10px 0px 40px; 
+}
+.ultext {
+  font-size: 16px; color: #5a5b5b; text-align: justify; line-height: 36px; font-family: "宋体";
 }
